--- a/force-app/main/default/classes/TesteTriggerLead.cls
+++ b/force-app/main/default/classes/TesteTriggerLead.cls
@@ -56,6 +56,8 @@ public class TesteTriggerLead {
         }                
         Test.startTest();
         insert testLeads;
+        testLeads[0].Company = 'teste.';
+        update testLeads;
         Test.stopTest();
         for (Lead lead : testLeads) {
             //System.assertEquals(true, lead.OwnerId != null, 'OwnerId não foi definido corretamente');
